--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,33 @@
+body {
+    padding-top: 50px;
+}
 
+.footer {
+    margin-top: 50px;
+    padding: 10px 30px 0;
+    color: #777;
+    border-top: 1px solid #e5e5e5;
+}
+
+#search-bar {
+    padding: 50px 0;
+}
+
+#tv-show-list {
+
+}
+
+.tv-show {
+    border: #e3e3e3 solid 1px;
+    margin-bottom: 20px;
+    overflow: hidden;
+}
+
+.tv-show img {
+    float: left;
+}
+
+.tv-show-info {
+    float: left;
+    padding-left: 20px;
+}
