--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ body {
     padding: 50px 0;
 }
 
+#tv-show-container {
+    padding: 50px 0;
+}
+
 .tv-show {
     border: #e3e3e3 solid 1px;
     margin-bottom: 20px;
@@ -28,4 +32,22 @@ body {
 .tv-show-info {
     float: left;
     margin: 0 0 10px 15px;
+}
+
+@keyframes blink {
+    50% {
+        color: transparent
+    }
+}
+
+.loader__dot {
+    animation: 1s blink infinite
+}
+
+.loader__dot:nth-child(2) {
+    animation-delay: 250ms
+}
+
+.loader__dot:nth-child(3) {
+    animation-delay: 500ms
 }
