--- a/src/index.css
+++ b/src/index.css
@@ -19,12 +19,12 @@ a:hover, a:focus {
 }
 
 #search-bar {
-    padding: 50px 0;
+    padding: 10px 0;
 }
 
-@media (max-width: 767px) {
+@media (min-width: 768px) {
     #search-bar {
-        padding: 10px 0;
+        padding: 50px 0;
     }
 }
 
@@ -72,7 +72,13 @@ a:hover, a:focus {
 
 .tv-show-info {
     float: left;
-    margin-bottom: 10px;
+    margin: 0 0 10px 10px;
+}
+
+@media (min-width: 768px) {
+    .tv-show-info {
+        margin-left: 0;
+    }
 }
 
 .tv-show-info__favourite {
@@ -97,12 +103,6 @@ a:hover, a:focus {
 /*noinspection CssUnusedSymbol*/
 .tv-show-info__status--ended {
     color: #E10028;
-}
-
-@media (max-width: 767px) {
-    .tv-show-info {
-        margin-left: 10px;
-    }
 }
 
 @keyframes blink {
@@ -194,7 +194,7 @@ a:hover, a:focus {
 }
 
 .schedule-episode {
-    border: #e3e3e3 solid 1px;
+    border: 1px solid #e3e3e3;
     padding: 10px;
     margin-bottom: 5px;
 }
